Random color Generator update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Random Color Generator</title>
 </head>
 <body>
-    
+    <h1>Refresh page to get new colors</h1>
+    <div class="main-container">
+        <div class="colors">#000000</div>
+        <div class="colors">#000000</div>
+        <div class="colors">#000000</div>
+        <div class="colors">#000000</div>
+        <div class="colors">#000000</div>
+        <div class="colors">#000000</div>
+    </div>
 </body>
 </html>
