--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
     <h1 class="heading">Refresh page to get new colors</h1>
     <div class="main-container">
-        <div class="colors">#000000</div>
-        <div class="colors">#000000</div>
-        <div class="colors">#000000</div>
-        <div class="colors">#000000</div>
-        <div class="colors">#000000</div>
-        <div class="colors">#000000</div>
+        <div id="colors" class="colors">#000000</div>
+        <div id="colors" class="colors">#000000</div>
+        <div id="colors" class="colors">#000000</div>
+        <div id="colors" class="colors">#000000</div>
+        <div id="colors" class="colors">#000000</div>
+        <div id="colors" class="colors">#000000</div>
     </div>
+
+
+
+    <script src="/index.js"></script>
 </body>
 </html>
